# erc2025_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_bot/share/my_bot/: package.dsv  package.ps1  package.sh
src/my_bot/: astar_planner.py  package.xml  path_follower.py  setup.py
src/my_bot/config/: drive_bot.rviz  my_controllers.yaml  slam_toolbox_params.yaml
src/my_bot/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/my_bot/launch/: launch_sim.launch.py  otonom.py  rsp.launch.py
src/my_bot/my_bot/: go_to_point.py
src/my_bot/worlds/: empty.world
src/my_bot/worlds/my_model/: Textured_mesh_1.mtl  model.sdf
