<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bot</name>
  <version>0.0.0</version>
  <description>My Bot paketi — Gazebo içinde otonom navigasyon düğümleri içerir</description>
  <maintainer email="cagatay@example.com">Çağatay Altıntopaç</maintainer>
  <license>Apache-2.0</license>

  <!-- ament_python ile build etmek için -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime bağımlılıklar -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- test araçları -->
  <test_depend>pytest</test_depend>

  <!-- Burada derleme türü olarak ament_python’ı bildiriyoruz -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
